--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "mainOutput": "main",
   "dependencies": {
     "react-router": "^0.7.0",
-    "react": "~0.11.2"
+    "react": "~0.11.2",
+    "flux": "~2.0.1"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
